feat(api): add prometheus HTTP metrics
